--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -31,11 +31,11 @@
                     <tr>
                         <td><label>Exam Date</label></td>
                         <td>
-                            <input type="text" name="examDisplay" id="examDisplay" placeholder="YYYY-MM-DD DAY" readonly>
-                            <input type="hidden" name="examDate" id="examDate">
+                            <input type="date" name="examDate" id="examDate" title="Select a weekday">
                             <input type="hidden" name="examDay" id="examDay">
                         </td>
                     </tr>
+
 
                     <!--
                     <tr>
