--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -29,9 +29,10 @@
                         <th>Input</th>
                     </tr>
                     <tr>
-                        <td><label>Exam Date</label></td>
+                        <td><label>Exam Date & Day</label></td>
                         <td>
-                            <input type="date" name="examDate" id="examDate" title="Select a weekday">
+                            <input type="text" name="examDateDay" id="examDateDay" readonly>
+                            <input type="date" name="examDate" id="examDate">
                             <input type="hidden" name="examDay" id="examDay">
                         </td>
                     </tr>
