--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -32,7 +32,7 @@
                         <td><label>Exam Date & Day</label></td>
                         <td>
                             <input type="text" name="examDateDay" id="examDateDay" readonly>
-                            <input type="date" name="examDate" id="examDate">
+                            <input type="date" name="examDate" id="examDate" style="display: none;">
                             <input type="hidden" name="examDay" id="examDay">
                         </td>
                     </tr>
