--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -31,8 +31,8 @@
                     <tr>
                         <td><label>Exam Date & Day</label></td>
                         <td>
-                            <input type="text" name="examDateDay" id="examDateDay" readonly>
-                            <input type="date" name="examDate" id="examDate" style="display: none;">
+                            <input type="date" name="examDateDay" id="examDateDay" readonly>
+                            <input type="hidden" name="examDate" id="examDate">
                             <input type="hidden" name="examDay" id="examDay">
                         </td>
                     </tr>
