--- a/app/templates/adminPart/adminAutoSchedule.html
+++ b/app/templates/adminPart/adminAutoSchedule.html
@@ -5,10 +5,10 @@
 
 <!-- Row 1 First Fesatures to upload merge schedule files--> 
 <div class="menu-section">
-    <h2>Generate Exam Schedule</h2> 
-    <label>Check this part, whether each admin able to select for all or just under self</label>    
+    <h2>Generate Exam Schedule</h2>    
     <form method="POST">  
         <h3>Insert the Ratio For Each Department</h3><br>
+        <label>Check this part, whether each admin able to select for all or just under self</label><br>
         <div style="width: 80%; display: flex; justify-content: space-between ;margin: auto; gap: 5%;">
             <!-- Left Table -->
             <div>
