--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -11,7 +11,7 @@
                     <div class="upload-container" id="courseUploadContainer">
                         <div class="upload-text">
                             Upload a file with an empty first row. Data should start from columns A to D,<br> 
-                            labeled as: 'code', 'section', 'name', and 'creditHour'<br><br><br>
+                            labeled as: 'Code', 'Section', 'Name', and 'CreditHour'<br><br><br>
                             Click to upload or drag and drop with below file format
                         </div>
                         <div class="file-types">XLSX, XLS, or XLSM</div><br>
