--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -5,6 +5,7 @@
     <h2>Manage Exam</h2>
     <form id="uploadExamForm" action="{{ url_for('admin_manageExam') }}" method="POST" enctype="multipart/form-data">
         <h3>Choose either 'Upload' or 'Manual' to insert new exam</h3>
+        <label>Combine up Date&Day and StartTime&EndTime</label><br>
         <div class="profile-frame">
             <div class="form-left">
                 <label for="exam_list">
