--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -28,9 +28,9 @@
                     <i class="fas fa-table"></i>
                     <span>Upload Lecturer Timetable</span>
                 </a>
-                <a href="{{ url_for('admin_uploadLecturerList') }}" class="tab-link {% if active_tab == 'admin_uploadLecturerListtab' %}active{% endif %}">
+                <a href="{{ url_for('admin_manageLecturer') }}" class="tab-link {% if active_tab == 'admin_manageLecturertab' %}active{% endif %}">
                     <i class="fas fa-users"></i>
-                    <span>Upload Lecturer Lists</span>
+                    <span>Manage Lecturer</span>
                 </a>
                 <a href="{{ url_for('admin_manageExam') }}" class="tab-link {% if active_tab == 'admin_manageExamtab' %}active{% endif %}">
                     <i class="fas fa-file-alt"></i>
