--- a/app/templates/adminPart/adminHomepage.html
+++ b/app/templates/adminPart/adminHomepage.html
@@ -19,7 +19,7 @@
     <!-- Row 2 First auto generated scdehule-->
     <div class="menu-section">
         <!-- <h2>Generate Exam Schedule</h2> -->
-        <a href="{{ url_for('admin_uploadLecturerList')}}" style="text-decoration: none;"><h2>Upload Lecturer List</h2></a>
+        <a href="{{ url_for('admin_manageLecturer')}}" style="text-decoration: none;"><h2>Upload Lecturer List</h2></a>
         <li class="submenu">
             <strong>  Functionality:</strong>
             <ul>
