--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-right" style="width: 30%;">
-                <table class="user-data-table">
+                <table class="enter-data-table">
                     <tr style="text-align: center;">
                         <th>Field</th>
                         <th>Input</th>
