--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -7,6 +7,7 @@
         <h3>Choose either 'Upload' or 'Manual' to insert new course</h3>
         <div class="profile-frame">
             <div class="form-left">
+                <lable style="text-align: center;">File Upload Section</lable>
                 <label for="course_list">
                     <div class="upload-container" id="courseUploadContainer">
                         <div class="upload-text">
@@ -23,6 +24,7 @@
             </div>
 
             <div class="form-right" style="width: 30%;">
+                <lable style="text-align: center;">Manual Data Entry Section</lable>
                 <table class="enter-data-table">
                     <tr style="text-align: center;">
                         <th>Field</th>
