--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -30,15 +30,15 @@
                 </a>
                 <a href="{{ url_for('admin_manageLecturer') }}" class="tab-link {% if active_tab == 'admin_manageLecturertab' %}active{% endif %}">
                     <i class="fas fa-users"></i>
-                    <span>Manage Lecturer</span>
+                    <span>Manage Lecturer (DONE)</span>
                 </a>
                 <a href="{{ url_for('admin_manageExam') }}" class="tab-link {% if active_tab == 'admin_manageExamtab' %}active{% endif %}">
                     <i class="fas fa-file-alt"></i>
-                    <span>Manage Exam</span>
+                    <span>Manage Exam (DONE)</span>
                 </a>
                 <a href="{{ url_for('admin_manageCourse') }}" class="tab-link {% if active_tab == 'admin_manageCoursetab' %}active{% endif %}">
                     <i class="fas fa-book"></i>
-                    <span>Manage Course</span>
+                    <span>Manage Course (DONE)</span>
                 </a>
                 <a href="{{ url_for('admin_autoGenerate') }}" class="tab-link {% if active_tab == 'admin_autoGeneratetab' %}active{% endif %}">
                     <i class="fas fa-calendar-alt"></i>
