--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -8,6 +8,7 @@
         <label>Combine up Date&Day and StartTime&EndTime</label><br>
         <div class="profile-frame">
             <div class="form-left">
+                <h4 style="text-align: center;">File Upload Section</h4>
                 <label for="exam_list">
                     <div class="upload-container" id="examUploadContainer">
                         <div class="upload-text">
@@ -24,6 +25,7 @@
             </div>
 
             <div class="form-right" style="width: 30%;">
+                <h4 style="text-align: center;">Manual Data Entry Section</h4>
                 <table class="enter-data-table">
                     <tr style="text-align: center;">
                         <th>Field</th>
