--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -7,7 +7,7 @@
         <h3>Choose either 'Upload' or 'Manual' to insert new course</h3>
         <div class="profile-frame">
             <div class="form-left">
-                <h4 style="text-align: center;">File Upload Section (Check need remove or not)</h4>
+                <h4 style="text-align: center;">File Upload Section</h4>
                 <label for="course_list">
                     <div class="upload-container" id="courseUploadContainer">
                         <div class="upload-text">
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-right" style="width: 30%;">
-                <h4 style="text-align: center;">Manual Data Entry Section (Check need remove or not)</h4>
+                <h4 style="text-align: center;">Manual Data Entry Section</h4>
                 <table class="enter-data-table">
                     <tr style="text-align: center;">
                         <th>Field</th>
