--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -9,7 +9,7 @@
         <label>Fix the Department and Role dropdowns to standardize field layout</label>
         <div class="profile-frame">
             <div class="form-left">
-                <h4 style="text-align: center;">File Upload Section</h4>
+                <h4 style="text-align: center;">File Upload Section (Check need remove or not)</h4>
                 <label for="lecturer_list">
                     <div class="upload-container" id="lecturerUploadContainer">
                         <div class="upload-text">
@@ -26,7 +26,7 @@
             </div>
 
             <div class="form-right" style="width: 30%;">
-                <h4 style="text-align: center;">Manual Data Entry Section</h4>
+                <h4 style="text-align: center;">Manual Data Entry Section (Check need remove or not)</h4>
                 <table class="enter-data-table">
                     <tr style="text-align: center;">
                         <th>Field</th>
