--- a/app/templates/adminPart/adminHomepage.html
+++ b/app/templates/adminPart/adminHomepage.html
@@ -61,7 +61,7 @@
     <!-- Row 2 First auto generated scdehule-->
     <div class="menu-section">
         <!-- <h2>Generate Exam Schedule</h2> -->
-        <a href="{{ url_for('admin_autoGenerate')}}" style="text-decoration: none;"><h2>Generate Exam Schedule</h2></a>
+        <a href="{{ url_for('admin_manageInvigilationTimetable')}}" style="text-decoration: none;"><h2>Manage Invigilation Timetable</h2></a>
         <li class="submenu">
             <strong>  Functionality:</strong>
             <ul>
