--- a/app/templates/adminPart/adminManageInvigilationTimetable.html
+++ b/app/templates/adminPart/adminManageInvigilationTimetable.html
@@ -1,11 +1,11 @@
 <!-- upload.html -->
 {% extends "adminPart/adminBase.html" %}
-{% block title %}Admin Automation{% endblock %}
+{% block title %}Admin ManageInvigilationTimetable{% endblock %}
 {% block content %}
 
 <!-- Row 1 First Fesatures to upload merge schedule files--> 
 <div class="menu-section">
-    <h2>Generate Exam Schedule</h2>    
+    <h2>Manage Invigilation Timetable</h2>    
     <form method="POST">  
         <h3>Insert the Ratio For Each Department</h3><br>
         <label>Check this part, whether each admin able to select for all or just under self</label><br>
