--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -26,7 +26,7 @@
                 </a>
                 <a href="{{ url_for('admin_uploadLecturerTimetable') }}" class="tab-link {% if active_tab == 'admin_uploadLecturerTimetabletab' %}active{% endif %}">
                     <i class="fas fa-table"></i>
-                    <span>Upload Lecturer Timetable</span>
+                    <span>Manage Timetable (Wait for Ms Usha)</span>
                 </a>
                 <a href="{{ url_for('admin_manageLecturer') }}" class="tab-link {% if active_tab == 'admin_manageLecturertab' %}active{% endif %}">
                     <i class="fas fa-users"></i>
@@ -40,9 +40,9 @@
                     <i class="fas fa-book"></i>
                     <span>Manage Course (DONE)</span>
                 </a>
-                <a href="{{ url_for('admin_autoGenerate') }}" class="tab-link {% if active_tab == 'admin_autoGeneratetab' %}active{% endif %}">
+                <a href="{{ url_for('admin_manageInvigilationTimetable') }}" class="tab-link {% if active_tab == 'admin_manageInvigilationTimetabletab' %}active{% endif %}">
                     <i class="fas fa-calendar-alt"></i>
-                    <span>Generate Schedule</span>
+                    <span>Manage Invigilation Timetable</span>
                 </a>
                 <!--<a href="{{ url_for('admin_manageLecturer') }}" class="tab-link {% if active_tab == 'admin_manageLecturertab' %}active{% endif %}">
                     <i class="fas fa-chalkboard-teacher"></i>
