--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -5,7 +5,7 @@
     <h2>Manage Exam</h2>
     <form id="uploadExamForm" action="{{ url_for('admin_manageExam') }}" method="POST" enctype="multipart/form-data">
         <h3>Choose either 'Upload' or 'Manual' to insert new exam</h3>
-        <label>Combine up Date&Day and StartTime&EndTime</label><br>
+        <label>Combine up Date&Day and StartTime&EndTime</label>
         <div class="profile-frame">
             <div class="form-left">
                 <h4 style="text-align: center;">File Upload Section</h4>
@@ -25,7 +25,7 @@
             </div>
 
             <div class="form-right" style="width: 30%;">
-                <h4 style="text-align: center;">Manual Data Entry Section</h4>
+                
                 <table class="enter-data-table">
                     <tr style="text-align: center;">
                         <th>Field</th>
