--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -5,6 +5,7 @@
     <h2>Manage Course</h2>
     <form id="uploadCourseForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
         <h3>Choose either 'Upload' or 'Manual' to insert new course</h3>
+        <lable>No errors encountered so far</lable>
         <div class="profile-frame">
             <div class="form-left">
                 <h4 style="text-align: center;">File Upload Section</h4>
