--- a/app/templates/adminPart/adminManageInvigilationTimetable.html
+++ b/app/templates/adminPart/adminManageInvigilationTimetable.html
@@ -7,12 +7,12 @@
 <div class="menu-section">
     <h2>Manage Invigilation Timetable</h2>    
     <form method="POST">  
-        <h3>Insert the Ratio For Each Department</h3><br>
+        <h3>Insert the Ratio For Each Department</h3>
         <label>Check this part, whether each admin able to select for all or just under self</label><br>
-        <div style="width: 80%; display: flex; justify-content: space-between ;margin: auto; gap: 5%;">
+        
             <!-- Left Table -->
             <div>
-                <table> 
+                <table class="enter-data-table"> 
                     <thead> 
                         <tr>
                             <th>Department</th>
@@ -34,7 +34,7 @@
 
             <!-- Right Table -->
             <div>
-                <table>
+                <table class="enter-data-table">
                     <thead> 
                         <tr>
                             <th>Department</th>
@@ -53,7 +53,7 @@
                     </tbody>
                 </table>
             </div>
-        </div>
+        
         <br>
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
