--- a/app/templates/adminPart/adminManageInvigilationTimetable.html
+++ b/app/templates/adminPart/adminManageInvigilationTimetable.html
@@ -8,8 +8,8 @@
     <h2>Manage Invigilation Timetable</h2>    
     <form method="POST">  
         <h3>Insert the Ratio For Each Department</h3>
-        <label>Check this part, whether each admin able to select for all or just under self</label><br>
-        
+        <label>Check this part, whether each admin able to select for all or just under self</label><br><br>
+        <div style="width: 80%; display: flex; justify-content: space-between ;margin: auto; gap: 5%;">
             <!-- Left Table -->
             <div>
                 <table class="enter-data-table"> 
@@ -53,7 +53,7 @@
                     </tbody>
                 </table>
             </div>
-        
+        </div>
         <br>
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
