--- a/app/templates/adminPart/adminManageInvigilationTimetable.html
+++ b/app/templates/adminPart/adminManageInvigilationTimetable.html
@@ -9,7 +9,7 @@
     <form method="POST">  
         <h3>Insert the Ratio For Each Department</h3>
         <label>Check this part, whether each admin able to select for all or just under self</label><br><br>
-        <div style="width: 80%; display: flex; justify-content: space-between ;margin: auto; gap: 5%;">
+        <div style="display: flex; justify-content: space-evenly;">
             <!-- Left Table -->
             <div>
                 <table class="enter-data-table"> 
