--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="form-right" style="width: 30%;">
-                
+                <h4 style="text-align: center;">Manual Data Entry Section</h4>
                 <table class="enter-data-table">
                     <tr style="text-align: center;">
                         <th>Field</th>
