--- a/app/templates/adminPart/adminManageInvigilationTimetable.html
+++ b/app/templates/adminPart/adminManageInvigilationTimetable.html
@@ -13,48 +13,37 @@
             <!-- Left Table -->
             <div>
                 <table class="enter-data-table"> 
-                    <thead> 
-                        <tr>
-                            <th>Department</th>
-                            <th>Ratio</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for dept in department_data[:department_data|length//2] %}
-                        <tr>
-                            <td>{{ dept.departmentCode }} - {{ dept.departmentName }}</td>
-                            <td>
-                                <input type="number" name="ratio" value="{{ ratio_text }}">
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                    <tr style="text-align: center;">
+                        <th>Department</th>
+                        <th>Ratio</th>
+                    </tr>
+                    {% for dept in department_data[:department_data|length//2] %}
+                    <tr>
+                        <label>{{ dept.departmentCode }} - {{ dept.departmentName }}</label>
+                        <td><input type="number" name="ratio" value="{{ ratio_text }}"></td>
+                    </tr>
+                    {% endfor %}
+                </table>    
             </div>
 
             <!-- Right Table -->
             <div>
-                <table class="enter-data-table">
-                    <thead> 
-                        <tr>
-                            <th>Department</th>
-                            <th>Ratio</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for dept in department_data[department_data|length//2:] %}
-                        <tr>
-                            <td>{{ dept.departmentCode }} - {{ dept.departmentName }}</td>
-                            <td>
-                                <input type="number" name="ratio" value="{{ ratio_text }}">
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                <table class="enter-data-table"> 
+                    <tr style="text-align: center;">
+                        <th>Department</th>
+                        <th>Ratio</th>
+                    </tr>
+                    {% for dept in department_data[department_data|length//2:] %}
+                    <tr>
+                        <label>{{ dept.departmentCode }} - {{ dept.departmentName }}</label>
+                        <td><input type="number" name="ratio" value="{{ ratio_text }}"></td>
+                    </tr>
+                    {% endfor %}
+                </table>    
             </div>
         </div>
         <br>
+
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages %}
@@ -65,12 +54,15 @@
             {% endif %}
         {% endwith %}
         <br>
+
         <div class="button-wrapper">
-                <button type="submit">Submit</button>
+                <button type="submit">Update</button>
         </div>
     </form>
-    <br><br>
 
+
+
+    <br><br>
     <h3>List of All Exam Sessions Details</h3>
     <div class="user-table-container">
         <table class="user-data-table">
