--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -46,7 +46,7 @@
                     </tr>
                     <tr>
                         <td><label>Role</label></td>
-                        <td>
+                        <td style="white-space: nowrap; width: 1%; ">
                             <select name="role" id="roleSelect" onchange="updateDepartmentLabel()" value="{{ role_text }}">
                                 <option value="" disabled selected>Select Role</option>
                                 <option value="LECTURER">LECTURER</option>
@@ -56,10 +56,9 @@
                             </select>
                         </td>
                     </tr>
-                    
                     <tr>
                         <td><label id="departmentLabel">Department</label></td>
-                        <td>
+                        <td style="white-space: nowrap; width: 1%; ">
                             <select name="department">
                                 <option value="" disabled selected>Select Department</option>
                                 {% for dept in department_data %}
