--- a/app/templates/adminPart/adminManageInvigilationTimetable.html
+++ b/app/templates/adminPart/adminManageInvigilationTimetable.html
@@ -56,7 +56,7 @@
         <br>
 
         <div class="button-wrapper">
-                <button type="submit">Update</button>
+                <button type="submit">Generate Invigilation Timetable</button>
         </div>
     </form>
 
