--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -16,7 +16,7 @@
                 <input type="text" name="email" value="{{ admin_email }}" readonly><br>
 
                 <label>Role Based</label>
-                <input type="text" name="role", value="{{ admin_role_text}}" readonly><br>
+                <input type="text" name="role", value="{{ admin_role_text}}" readonly>
             </div>
             <div class="form-right">
                 <label>Department</label>
