--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -467,7 +467,7 @@ h2 {
     color: white;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    width: 25vh;
+    width: 25%;
 }
 
 
