--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -69,7 +69,7 @@
         <br>
 
         <div class="button-wrapper">
-                <button type="submit">Update</button>
+                <button type="submit">Upload/Add New Course</button>
         </div>
     </form>
 
