--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -34,7 +34,7 @@
         {% endwith %}
         <br>
         <div class="button-wrapper">
-                <button type="submit">Submit</button>
+                <button type="submit">Upload/Add New Department</button>
         </div>
     </form>
     <br><br>
