--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -96,7 +96,7 @@
         <br>
 
         <div class="button-wrapper">
-                <button type="submit">Update</button>
+                <button type="submit">Upload/Add New Lecturer</button>
         </div>
     </form>
 
