--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -54,7 +54,7 @@
         {% endwith %}
         <br>
         <div class="button-wrapper">
-                <button type="submit">Submit</button>
+                <button type="submit">Update</button>
         </div>
     </form>
 </div>
