--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -21,7 +21,7 @@
         
         <!-- Submit button -->
         <div class="button-wrapper">
-            <button type="submit">Upload</button>
+            <button type="submit">Upload/Add New Lecturer Timetable</button>
         </div>
     </form>
 
