--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -88,7 +88,7 @@
         <br>
 
         <div class="button-wrapper">
-                <button type="submit">Update</button>
+                <button type="submit">Upload/Add New Exam</button>
         </div>
     </form>
 
