--- a/app/templates/adminPart/adminHomepage.html
+++ b/app/templates/adminPart/adminHomepage.html
@@ -104,7 +104,7 @@
     <!-- Row 1 First Fesatures to upload merge schedule files--> 
     <div class="menu-section">
         <!--   <h2>Upload File</h2><br>  -->
-        <a href="{{ url_for('admin_viewReport')}}" style="text-decoration: none;"><h2>View Inviglation Report</h2></a>
+        <a href="{{ url_for('admin_manageInvigilationReport')}}" style="text-decoration: none;"><h2>Manage Inviglation Report</h2></a>
         <li class="submenu">
             <strong>  Purpose:</strong>
             <ul>    
