--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -42,7 +42,7 @@
                 </a>
                 <a href="{{ url_for('admin_manageInvigilationTimetable') }}" class="tab-link {% if active_tab == 'admin_manageInvigilationTimetabletab' %}active{% endif %}">
                     <i class="fas fa-calendar-alt"></i>
-                    <span>Manage Invigilation Timetable</span>
+                    <span>Manage Invigilation Timetable (Wait for Ms Usha)</span>
                 </a>
                 <!--<a href="{{ url_for('admin_manageLecturer') }}" class="tab-link {% if active_tab == 'admin_manageLecturertab' %}active{% endif %}">
                     <i class="fas fa-chalkboard-teacher"></i>
@@ -52,9 +52,9 @@
                     <i class="fas fa-chalkboard-teacher"></i>
                     <span>Manage Department</span>
                 </a>
-                <a href="{{ url_for('admin_viewReport') }}" class="tab-link {% if active_tab == 'admin_viewReporttab' %}active{% endif %}">
+                <a href="{{ url_for('admin_manageInvigilationReport') }}" class="tab-link {% if active_tab == 'admin_manageInvigilationReporttab' %}active{% endif %}">
                     <i class="fas fa-file"></i>
-                    <span>View Report</span>
+                    <span>Manage Invigilation Report</span>
                 </a>
                 <a href="{{ url_for('admin_profile') }}" class="tab-link {% if active_tab == 'admin_profiletab' %}active{% endif %}">
                     <i class="fas fa-user"></i>
