--- a/app/templates/adminPart/adminManageInvigilationReport.html
+++ b/app/templates/adminPart/adminManageInvigilationReport.html
@@ -1,6 +1,6 @@
 <!-- upload.html -->
 {% extends "adminPart/adminBase.html" %}
-{% block title %}Admin ViewInvigilationReport{% endblock %}
+{% block title %}Admin ManageInvigilationReport{% endblock %}
 {% block content %}
 
 <!-- Row 1 First Fesatures to upload merge schedule files--> 
