--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -24,7 +24,7 @@
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
-                <a href="{{ url_for('admin_uploadLecturerTimetable') }}" class="tab-link {% if active_tab == 'admin_uploadLecturerTimetabletab' %}active{% endif %}">
+                <a href="{{ url_for('admin_manageTimetable') }}" class="tab-link {% if active_tab == 'admin_manageTimetabletab' %}active{% endif %}">
                     <i class="fas fa-table"></i>
                     <span>Manage Timetable (Wait for Ms Usha)</span>
                 </a>
