--- a/app/templates/adminPart/adminManageTimetable.html
+++ b/app/templates/adminPart/adminManageTimetable.html
@@ -1,6 +1,6 @@
 <!-- upload.html -->
 {% extends "adminPart/adminBase.html" %}
-{% block title %}Admin UploadLecturerTimetable{% endblock %}
+{% block title %}Admin ManageTimetable{% endblock %}
 {% block content %}
 <div class="menu-section">
     <h2>Upload Lecturer Timetable</h2>
