--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -26,7 +26,7 @@
                 </a>
                 <a href="{{ url_for('admin_manageTimetable') }}" class="tab-link {% if active_tab == 'admin_manageTimetabletab' %}active{% endif %}">
                     <i class="fas fa-table"></i>
-                    <span>Manage Timetable (Wait for Ms Usha)</span>
+                    <span>Manage Timetable (Wait Ms Usha)</span>
                 </a>
                 <a href="{{ url_for('admin_manageLecturer') }}" class="tab-link {% if active_tab == 'admin_manageLecturertab' %}active{% endif %}">
                     <i class="fas fa-users"></i>
@@ -42,7 +42,7 @@
                 </a>
                 <a href="{{ url_for('admin_manageInvigilationTimetable') }}" class="tab-link {% if active_tab == 'admin_manageInvigilationTimetabletab' %}active{% endif %}">
                     <i class="fas fa-calendar-alt"></i>
-                    <span>Manage Invigilation Timetable (Wait for Ms Usha)</span>
+                    <span>Manage Invigilation Timetable (Wait Ms Usha)</span>
                 </a>
                 <!--<a href="{{ url_for('admin_manageLecturer') }}" class="tab-link {% if active_tab == 'admin_manageLecturertab' %}active{% endif %}">
                     <i class="fas fa-chalkboard-teacher"></i>
