--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -5,7 +5,7 @@
 <div class="menu-section">
     <h2>Manage Lecturer</h2>
     <form id="uploadLecturerForm" action="{{ url_for('admin_manageLecturer') }}" method="POST" enctype="multipart/form-data">
-        <h3>Choose either 'Upload' or 'Manual' to insert new lecturer</h3>
+        <h3>Choose Either 'Upload' or 'Manual' to Insert New Lecturer</h3>
         <label>Fix the Department and Role dropdowns to standardize field layout</label>
         <div class="profile-frame">
             <div class="form-left">
