--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -4,7 +4,7 @@
 <div class="menu-section">
     <h2>Manage Course</h2>
     <form id="uploadCourseForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
-        <h3>Choose either 'Upload' or 'Manual' to insert new course</h3>
+        <h3>Choose Either 'Upload' or 'Manual' to Insert New Course</h3>
         <lable>No errors encountered so far</lable>
         <div class="profile-frame">
             <div class="form-left">
