--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -4,7 +4,7 @@
 <div class="menu-section">
     <h2>Manage Exam</h2>
     <form id="uploadExamForm" action="{{ url_for('admin_manageExam') }}" method="POST" enctype="multipart/form-data">
-        <h3>Choose either 'Upload' or 'Manual' to insert new exam</h3>
+        <h3>Choose Either 'Upload' or 'Manual' to Insert New Exam</h3>
         <label>Combine up Date&Day and StartTime&EndTime</label>
         <div class="profile-frame">
             <div class="form-left">
