--- a/app/templates/adminPart/adminManageInvigilationTimetable.html
+++ b/app/templates/adminPart/adminManageInvigilationTimetable.html
@@ -7,7 +7,7 @@
 <div class="menu-section">
     <h2>Manage Invigilation Timetable</h2>    
     <form method="POST">  
-        <h3>Insert the Ratio For Each Department</h3>
+        <h3>Insert Ratio For Each Department to Generate Invigilation Timetable</h3>
         <label>Check this part, whether each admin able to select for all or just under self</label><br>
         <label>Now able to update the ratio, but without the main function to read the lecturers flexibility</label><br><br>
         <div style="display: flex; justify-content: space-evenly;">
