--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -7,7 +7,7 @@
 <div class="menu-section">
     <h2>Manage Department</h2>
     <form method="POST">
-        <h3>Insert New Department Code, and Department Name; Department Ratio is an optional</h3>
+        <h3>Insert Below Data to Add New Department. Ratio Optional.</h3>
         <div class="profile-frame">
             <div class="form-left" style="width: 30%">
                 <label>Department Code</label>
