--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -8,6 +8,7 @@
     <h2>Manage Department</h2>
     <form method="POST">
         <h3>Insert Below Data to Add New Department. Ratio Optional.</h3>
+        <label>Now able to add a new department, does it need a uplaod function?</label><br>
         <div class="profile-frame">
             <div class="form-left" style="width: 30%">
                 <label>Department Code</label>
