--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -8,15 +8,13 @@
     <h2>Manage Department</h2>
     <form method="POST">
         <h3>Insert Below Data to Add New Department. Ratio Optional.</h3>
-        <label>Now able to add a new department, does it need a uplaod function?</label><br>
+        <label>Now able to add a new department, does it need a uplaod function?</label><br><br>
         <div class="profile-frame">
             <div class="form-left" style="width: 30%">
                 <label>Department Code</label>
                 <input type="text" name="departmentCode" value="{{ departmentCode_text }}"><br>
-            </div>
-            <div class="form-middle" style="width: 30%">
                 <label>Department Name</label>
-                <input type="text" name="departmentName" value="{{ departmentName_text }}"><br>
+                <input type="text" name="departmentName" value="{{ departmentName_text }}">
             </div>
             <div class="form-right" style="width: 30%">
                 <label>Department Ratio (Optional)</label>
