--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -10,13 +10,11 @@
         <h3>Insert Below Data to Add New Department. Ratio Optional.</h3>
         <label>Now able to add a new department, does it need a uplaod function?</label><br><br>
         <div class="profile-frame">
-            <div class="form-left" style="width: 30%">
+            <div class="form-middle" style="width: 30%">
                 <label>Department Code</label>
                 <input type="text" name="departmentCode" value="{{ departmentCode_text }}"><br>
                 <label>Department Name</label>
-                <input type="text" name="departmentName" value="{{ departmentName_text }}">
-            </div>
-            <div class="form-right" style="width: 30%">
+                <input type="text" name="departmentName" value="{{ departmentName_text }}"><br>
                 <label>Department Ratio (Optional)</label>
                 <input type="number" name="departmentRatio" value="{{ departmentRatio_text }}">
             </div>
