--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -10,22 +10,22 @@
         <h3>Insert Below Data to Add New Department. Ratio Optional.</h3>
         <label>Now able to add a new department, does it need a uplaod function?</label><br><br>
         <div class="profile-frame">
-            <div class="form-middle" style="width: 30%;">
+            <div class="form-middle">
                 <table class="enter-data-table">
                     <tr style="text-align: center;">
                         <th>Field</th>
                         <th>Input</th>
                     </tr>
                     <tr>
-                        <td><label>Department Code</label></td>
+                        <td>Department Code</td>
                         <td><input type="text" name="departmentCode" value="{{ departmentCode_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label>Department Name</label></td>
+                        <td>Department Name</td>
                         <td><input type="text" name="departmentName" value="{{ departmentName_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label>Department Ratio (Optional)/label></td>
+                        <td>Department Ratio (Optional)</td>
                         <td><input type="number" name="departmentRatio" value="{{ departmentRatio_text }}"></td>
                     </tr>
                 </table>
