--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -32,19 +32,19 @@
                         <th>Input</th>
                     </tr>
                     <tr>
-                        <td><label>Course Code</label></td>
+                        <td>Course Code</td>
                         <td><input type="text" name="courseCode" value="{{ courseCode_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label>Course Section</label></td>
+                        <td>Course Section</td>
                         <td><input type="text" name="courseSection" value="{{ courseSection_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label>Course Name</label></td>
+                        <td>Course Name</td>
                         <td><input type="text" name="courseName" value="{{ courseName_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label>Course Credit Hours</label></td>
+                        <td>Course Credit Hours</td>
                         <td><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
                     </tr>
                 </table>
