--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -32,39 +32,39 @@
                         <th>Input</th>
                     </tr>
                     <tr>
-                        <td><label>Exam Date</label></td>
+                        <td>Exam Date</td>
                         <td><input type="date" name="examDate" id="examDate" value="{{ examDate_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label>Exam Day</label></td>
+                        <td>Exam Day</td>
                         <td><input type="text" name="examDay" id="examDay" value="{{ examDay_text }}" readonly></td>
                     </tr>
                     <tr>
-                        <td><label>Start Time</label></td>
+                        <td>Start Time</td>
                         <td><input type="text" name="startTime" value="{{ startTime_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label>End Time</label></td>
+                        <td>End Time</td>
                         <td><input type="text" name="endTime" value="{{ endTime_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label>Program Code</label></td>
+                        <td>Program Code</td>
                         <td><input type="text" name="programCode" value="{{ programCode_text }}"></td>
                     </tr>                    
                     <tr>
-                        <td><label>Course/Section</label></td>
+                        <td>Course/Section</td>
                         <td><input type="text" name="courseSection" value="{{ courseSection_text }}"></td>
                     </tr>                    
                     <tr>
-                        <td><label>Lecturer</label></td>
+                        <td>Lecturer</td>
                         <td><input type="text" name="lecturer" value="{{ lecturer_text }}"></td>
                     </tr>                    
                     <tr>
-                        <td><label>No. of Students</label></td>
+                        <td>No. of Students</td>
                         <td><input type="number" name="student" value="{{ student_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label>Venue</label></td>
+                        <td>Venue</td>
                         <td><input type="text" name="venue" value="{{ venue_text }}"></td>
                     </tr>
                 </table>
