--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -33,19 +33,19 @@
                         <th>Input</th>
                     </tr>
                     <tr>
-                        <td><label>ID</label></td>
+                        <td>ID</td>
                         <td><input type="text" name="userid" value="{{ id_text }}"><br></td>
                     </tr>
                     <tr>
-                        <td><label>Name</label></td>
+                        <td>Name</td>
                         <td><input type="text" name="username" value="{{ name_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label>Email Address</label></td>
+                        <td>Email Address</td>
                         <td><input type="text" name="email" value="{{ email_text }}"></td>
                     </tr>
                     <tr>
-                        <td><label>Role</label></td>
+                        <td>Role</td>
                         <td>
                             <select name="role" id="roleSelect" onchange="updateDepartmentLabel()" value="{{ role_text }}">
                                 <option value="" disabled selected>Select Role</option>
@@ -71,7 +71,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><label>Contact Number</label></td>
+                        <td>Contact Number</td>
                         <td><input type="tel" name="contact" value="{{ contact_text }}"></td>
                     </tr>
                 </table>
