--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -30,7 +30,7 @@
                 </a>
                 <a href="{{ url_for('admin_manageDepartment') }}" class="tab-link {% if active_tab == 'admin_manageDepartmenttab' %}active{% endif %}">
                     <i class="fas fa-chalkboard-teacher"></i>
-                    <span>Manage Department</span>
+                    <span>Manage Department (DONE)</span>
                 </a>
                 <a href="{{ url_for('admin_manageExam') }}" class="tab-link {% if active_tab == 'admin_manageExamtab' %}active{% endif %}">
                     <i class="fas fa-file-alt"></i>
@@ -54,7 +54,7 @@
                 </a>
                 <a href="{{ url_for('admin_profile') }}" class="tab-link {% if active_tab == 'admin_profiletab' %}active{% endif %}">
                     <i class="fas fa-user"></i>
-                    <span>Profile</span>
+                    <span>Profile (DONE)</span>
                 </a>
                 <a href="{{ url_for('logout') }}" class="logout-btn">
                     <i class="fas fa-sign-out-alt"></i>
